src/features/roller/index.module.less
@import (reference) "common.less";

.config-opener {
  float: right;
}

.extended {
  :global(.ant-collapse-content-box) > div {
    max-width: @screen-lg;

    form {
      max-width: @screen-lg;
    }
  }
}

.intent-container {
  .paper-background();
  flex: 1;
  padding-left: 8px;
  padding-right: 8px;
  padding-bottom: 32px;

  @media (min-width: @screen-md) {
    padding-left: 24px;
    padding-right: 24px;
  }
}

